--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "pandas>=2.2.3",
     "python-dotenv>=1.0.1",
     "streamlit>=1.41.1",
+    "torch>=2.5.1",
+    "transformers>=4.47.1",
 ]
