--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "openai>=1.59.3",
     "pandas>=2.2.3",
+    "pytesseract>=0.3.13",
     "python-dotenv>=1.0.1",
     "streamlit>=1.41.1",
 ]
